--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -4,8 +4,9 @@
     max-height: 10%;
     display: flex;
     justify-content: space-between;
-    padding: 1rem 2rem 1rem 2rem;
+    padding: var(--gpad);
     border-bottom: 2px solid #000;
+    position: sticky;
 }
 
 .navbar .nav-links {
@@ -16,4 +17,5 @@
 
 .nav-links > * {
     padding: 0 .5rem 0 .5rem;
+    cursor: pointer;
 }
