--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -45,10 +45,19 @@
 }
 
 /* Specific catagory image adjustments */
-.catagory-card #women-apparal { object-position: 0 10%; }
+.catagory-card #female-apparal { object-position: 0 10%; }
 .catagory-card #essentials { object-position: 0 70%; }
 .catagory-card #nutrition { object-position: 50% 0; }
 
 .catagory-card:hover {
     transform: translateY(-2px);
+}
+
+/* Product Cards */
+.product-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid red;
 }
