--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,7 +29,9 @@ a {
 
 #root {
   width: 100vw;
-  height: 100vh;
+  height: 100vh;    
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 button {
