--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -1,7 +1,14 @@
 .homepage {
-    width: 100vw;
-    height: 100%;
     position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.hero {
+    position: relative;
+    height: 100%;
+    min-height: 700px;
+    max-height: 900px;
 }
 
 .homepage .hero-background {
@@ -13,15 +20,37 @@
     object-position: 0 60%;
 }
 
-.hero {
+.hero-text {
     position: absolute;
-    background: transparent;
     z-index: 2;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    font-size: 5rem;
-    color: var(--primary);
+    background: transparent;
 }
+
+.hero-text * {
+    color: var(--primary);
+    background: inherit;
+}
+
+.hero-text > h1 {
+    font-size: 4rem;
+}
+
+.hero-text .catalog-link {
+    font-size: 1.5rem;
+    background: var(--primary);
+    color: #000;
+    padding: .3rem .7rem .3rem .7rem;
+    border-radius: .5rem;
+}
+
+/* .explore {
+    height: 100%; 
+    min-height: 200px;
+    max-height: 400px;
+} */
