--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,8 +1,6 @@
 .products {
     width: 100vw;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: scroll;
     padding: var(--gpad);
 }
 
@@ -42,6 +40,8 @@
 
 .catagory-title {
     background: transparent;
+    color: #fff;
+    font-size: 2rem;
 }
 
 /* Specific catagory image adjustments */
@@ -60,4 +60,9 @@
     justify-content: center;
     align-items: center;
     border: 2px solid red;
+    background-color: #fff;
+}
+
+.product-card * {
+    background: inherit;
 }
