--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -6,9 +6,10 @@
 
 .hero {
     position: relative;
-    height: 100%;
+    height: 100vh;
+    /* height: 100%;
     min-height: 700px;
-    max-height: 900px;
+    max-height: 900px; */
 }
 
 .homepage .hero-background {
