--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,6 +1,7 @@
 .products {
     width: 100vw;
     height: 100%;
+    min-height: 1000px;
     padding: var(--gpad);
 }
 
@@ -54,13 +55,41 @@
 }
 
 /* Product Cards */
+.product-container {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(200px, 400px));
+    grid-template-rows: repeat(auto, minmax(200px, 400px));
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
 .product-card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: 2px solid red;
     background-color: #fff;
+    aspect-ratio: 1/1;
+}
+
+.product-card .product-img-wrapper {
+    position: relative;
+    width: 100%;
+    height: 80%;
+}
+
+.product-card img {
+    position: absolute;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: center;
+    width: 100%;
+    height: 100%;
+}
+
+.product-card .product-details {
+    padding: 0 1rem 1rem 1rem;
 }
 
 .product-card * {
