--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -4,6 +4,66 @@
     top: 0;
     border: 2px solid red;   
     width: 600px;
-    height: 100vh;
+    height: 100%;
+    min-height: fit-content;
     z-index: 5;
+    padding: var(--gpad);
+}
+
+.cart-container .title {
+    width: 100%;
+    text-align: center;
+}
+
+.cart-overview {
+    list-style: none;
+    border-bottom: 2px solid #000;
+}
+
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cart-container .thumbnail {
+    max-width: 100px;
+}
+
+.cart-total-price {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.checkout {
+    border: 2px solid var(--primary);
+    background-color: var(--primary);
+    padding: .2rem 1rem .2rem 1rem;
+    border-radius: .5rem;
+    justify-content: center;
+    width: 100%;
+    cursor: pointer;
+}
+
+.checkout:hover {
+    transform: translateY(2px);
+    transition: all 150ms ease-in;
+}
+
+.disclaimer-title{
+    width: 100%;
+    text-align: center;
+    color: red;
+    border-bottom: 2px solid red;
+}
+
+.disclaimer {
+    font-size: 1.25rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    color: red;
 }
