Added font awesome icons

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -12,6 +12,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    font-size: 1.25rem;
 }
 
 .nav-links > * {
@@ -22,3 +23,4 @@
 .logo {
     font-size: 2rem;
 }
+
