--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -1,11 +1,9 @@
 .cart-container {
     position: absolute;
     right: 0;
-    top: 0;
-    border: 2px solid red;   
+    top: 0; 
     width: 600px;
-    height: 100%;
-    min-height: fit-content;
+    height: fit-content;
     z-index: 5;
     padding: var(--gpad);
 }
@@ -21,20 +19,28 @@
 }
 
 .cart-item {
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 6fr 2fr;
+    padding: .1rem .5rem 0 .5rem;
     align-items: center;
 }
 
 .cart-container .thumbnail {
-    max-width: 100px;
+    width: 100%;
+    justify-self: flex-start;
+}
+
+.cart-container .cart-name {
+    width: 60%;
+    text-align: left;
+    justify-self: center;
 }
 
 .cart-total-price {
     width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+    display: block;
+    text-align: center;
 }
 
 .checkout {
@@ -66,4 +72,20 @@
     align-items: center;
     width: 100%;
     color: red;
+}
+
+.close {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.closebtn {
+    cursor: pointer;
+    font-size: 1.5rem;
+}
+
+.closebtn:hover {
+    transform: translateY(1px);
+    transition: all 150ms ease-in;
 }
