--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,7 +1,6 @@
 .products {
     width: 100vw;
-    height: 100%;
-    min-height: 1000px;
+    height: fit-content;
     padding: var(--gpad);
 }
 
@@ -57,8 +56,8 @@
 /* Product Cards */
 .product-container {
     display: grid;
-    grid-template-columns: repeat(2, minmax(200px, 400px));
-    grid-template-rows: repeat(auto, minmax(200px, 400px));
+    grid-template-columns: repeat(2, minmax(300px, 500px));
+    grid-template-rows: repeat(2, minmax(300px, 500px));
     justify-content: center;
     align-items: center;
     gap: 1rem;
@@ -67,16 +66,17 @@
 .product-card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     background-color: #fff;
-    aspect-ratio: 1/1;
+    width: 100%;
+    height: 100%;
 }
 
 .product-card .product-img-wrapper {
     position: relative;
     width: 100%;
-    height: 80%;
+    height: 70%;
 }
 
 .product-card img {
@@ -89,9 +89,27 @@
 }
 
 .product-card .product-details {
-    padding: 0 1rem 1rem 1rem;
+    width: 100%;
+    height: 30%;
+    min-height: fit-content;
+    padding: 0 1rem 0 1rem;
 }
 
 .product-card * {
     background: inherit;
+}
+
+.product-card button {
+    border: 2px solid var(--primary);
+    background-color: var(--primary);
+    padding: .2rem 1rem .2rem 1rem;
+    border-radius: .5rem;
+    justify-content: center;
+    width: 50%;
+    cursor: pointer;
+}
+
+.product-card button:hover{
+    transform: translateY(2px);
+    transition: all 150ms ease-in;
 }
