--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -6,13 +6,14 @@
     justify-content: space-between;
     padding: var(--gpad);
     border-bottom: 2px solid #000;
+    color: #000;
 }
 
 .navbar .nav-links {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
 }
 
 .nav-links > * {
@@ -22,5 +23,30 @@
 
 .logo {
     font-size: 2rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
 }
 
+.nav-cart {
+    font-size: 2rem;
+    position: relative;
+}
+
+.cart-counter {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: 0;
+    bottom: 0;
+    border-radius: 50%;
+    height: 1.5rem;
+    width: 1.5rem;
+    background: #fff;
+    border: 2px solid #000;
+    color: #000;
+    font-size: .75rem;
+    padding: .3rem;
+}
