--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,13 +16,12 @@ body,
   --primary: #19A7CE;
   --secondary: #AFD3E2;
   --accent: #146C94;
-  --background: #fff;
   /* alt bg F6F1F1 */
   --gpad: 1rem 2rem 1rem 2rem;;
 
   background-color: var(--background);
   color: var(--text);
-  font-family: Poppins, 'sans-serf';
+  font-family: Poppins, 'sans-serf', 'Times New Roman', Times, serif;
 }
 
 a {
