--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -50,3 +50,13 @@
     font-size: .75rem;
     padding: .3rem;
 }
+
+/* Media */
+@media (max-width: 750px){
+    .navbar {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-height: 20%;
+    }
+}
