--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -113,3 +113,24 @@
     transform: translateY(2px);
     transition: all 150ms ease-in;
 }
+
+/* Media */
+@media (max-width: 750px){
+    .products .catagory-container,
+    .products .product-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: fit-content;
+    }
+
+    .catagory-card,
+    .product-card {
+        width: 100%;
+        
+    }
+
+    .product-img-wrapper{
+        min-height: 300px;
+    }
+}
