--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -1,6 +1,6 @@
 .products {
-    width: 100vw;
-    height: fit-content;
+    display: block;
+    min-height: fit-content;
     padding: var(--gpad);
 }
 
@@ -57,7 +57,7 @@
 .product-container {
     display: grid;
     grid-template-columns: repeat(2, minmax(300px, 500px));
-    grid-template-rows: repeat(2, minmax(300px, 500px));
+    grid-template-rows: repeat(2, minmax(400px, 500px));
     justify-content: center;
     align-items: center;
     gap: 1rem;
@@ -76,7 +76,7 @@
 .product-card .product-img-wrapper {
     position: relative;
     width: 100%;
-    height: 70%;
+    height: 65%;
 }
 
 .product-card img {
@@ -90,9 +90,19 @@
 
 .product-card .product-details {
     width: 100%;
-    height: 30%;
+    height: 35%;
     min-height: fit-content;
     padding: 0 1rem 0 1rem;
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: minmax(fit-content, 1fr) 1fr;
+    row-gap: 0;
+}
+
+.product-price {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .product-card * {
@@ -121,16 +131,21 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: fit-content;
+        min-height: fit-content;
     }
-
-    .catagory-card,
-    .product-card {
+    .catagory-card{
         width: 100%;
-        
+        height: 250px;
     }
-
+    .product-card {
+        margin-bottom: 1rem;
+        height: 325px;
+    }
     .product-img-wrapper{
-        min-height: 300px;
+        min-height: 200px;
+    }
+    .product-card img {
+        object-fit: contain;
+        scale: 1.25;
     }
 }
