--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -48,7 +48,8 @@
     border: 2px solid #000;
     color: #000;
     font-size: .75rem;
-    padding: .3rem;
+    padding: .6rem;
+    margin-bottom:  .15rem;
 }
 
 /* Media */
