--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -6,22 +6,23 @@
     padding: var(--gpad);
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     width: 600px;
     height: 90%;
     background-color: #fff;
     border-bottom-left-radius: 3rem;
+    gap: 5px;
 }
 
 .cart-container .title {
     text-align: center;
-    height: 5%;
-    min-height: fit-content;
+    margin-bottom: 10px;
 }
 
 .cart-overview {
     list-style: none;
     border-bottom: 2px solid #000;
-    height: 70%;
+    max-height: 50%;
     overflow-y: auto;
 }
 
@@ -47,17 +48,19 @@
 .cart-total-price {
     display: block;
     text-align: center;
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .checkout {
     border: 2px solid var(--primary);
     background-color: var(--primary);
-    padding: .2rem 1rem 0 1rem;
+    padding: .2rem 1rem .2rem 1rem;
     border-radius: .5rem;
     justify-content: center;
     cursor: pointer;
     width: 100%;
-    height: 5%;
+    margin-bottom: 35px;
 }
 
 .checkout:hover {
@@ -69,7 +72,6 @@
     text-align: center;
     color: red;
     border-bottom: 2px solid red;
-    height: fit-content;
 }
 
 .disclaimer {
@@ -79,9 +81,8 @@
     align-items: center;
     width: 100%;
     color: red;
-    padding-top: .3rem;
-    height: fit-content;
-    margin-bottom: 1.4rem;
+    padding-top: .5rem;
+    padding-bottom: 1.5rem;
 }
 
 .close {
