--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     min-height: fit-content;
-    max-height: 10%;
+    max-height: 15%;
     display: flex;
     justify-content: space-between;
     padding: var(--gpad);
@@ -14,11 +14,14 @@
     align-items: center;
     justify-content: space-around;
     font-size: 1.5rem;
+    height: 100%;
 }
 
 .nav-links > * {
     padding: 0 .5rem 0 .5rem;
     cursor: pointer;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .logo {
@@ -27,6 +30,8 @@
     justify-content: flex-start;
     align-items: center;
     gap: 10px;
+    padding-bottom: 5px;
+    padding-top: 5px;
 }
 
 .nav-cart {
@@ -49,7 +54,7 @@
     color: #000;
     font-size: .75rem;
     padding: .6rem;
-    margin-bottom:  .15rem;
+    margin-bottom:  .45rem;
 }
 
 /* Media */
