--- a/src/styles/product.css
+++ b/src/styles/product.css
@@ -45,7 +45,7 @@
 }
 
 /* Specific catagory image adjustments */
-.catagory-card #female-apparal { object-position: 0 10%; }
+.catagory-card #female-apparel { object-position: 0 10%; }
 .catagory-card #essentials { object-position: 0 70%; }
 .catagory-card #nutrition { object-position: 50% 0; }
 
